--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,13 +6,35 @@
     - name: update repository index
       ansible.builtin.dnf:
         update_cache: yes
-      
+      when: ansible_distribution == "CentOS"
+
     - name: Install Apache2 Package
       ansible.builtin.dnf: 
         name: httpd
         state: latest
+      when: ansible_distribution == "CentOS"
 
     - name: Install php Package
       ansible.builtin.dnf:
         name: php
         state: latest
+      when: ansible_distribution == "CentOS"
+       
+    - name: update repository index
+      ansible.builtin.apt:
+        update_cache: yes
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Install Apache2 Package
+      ansible.builtin.apt:
+        name: apache2
+        state: latest
+      when: ansible_distribution == "Ubuntu"
+
+    - name: Install php Package
+      ansible.builtin.apt:
+        name: php
+        state: latest
+      when: ansible_distribution == "Ubuntu"
+       
+       
